--- a/front-end/src/pages/home/Home.scss
+++ b/front-end/src/pages/home/Home.scss
@@ -3,11 +3,26 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 217px;
+  margin-left: 180px;
   margin-right: 100px;
-  margin-block: 100px;
+  margin-block: 40px;
   .data-wrapper {
+    margin-top: 40px;
+    height: 590px;
+    width: 100%;
     display: flex;
-    //flex-direction: row;
+    justify-content: space-between;
+    .charts {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 100%;
+      width: 100%;
+      margin-right: 3rem;
+      &-bottom {
+        display: flex;
+        justify-content: space-between;
+      }
+    }
   }
 }
