--- a/front-end/src/components/activity/Activity.scss
+++ b/front-end/src/components/activity/Activity.scss
@@ -1,7 +1,6 @@
-.score {
-  width: 280px;
-  height: 290px;
+.charts-top {
   background-color: #FBFBFB;
   border-radius: 10px;
-
+  width: 100%;
+  height: 280px;
 }
