--- a/front-end/src/components/score/Score.scss
+++ b/front-end/src/components/score/Score.scss
@@ -3,5 +3,8 @@
   height: 290px;
   background-color: #FBFBFB;
   border-radius: 10px;
+  display: flex;
+    justify-content: center;
+    align-items: center;
 
 }
