--- a/front-end/src/components/layout/header/Header.scss
+++ b/front-end/src/components/layout/header/Header.scss
@@ -3,7 +3,9 @@
     display: flex;
   z-index: 2;
   width: 100%;
+  // height: 10vw;
   height: 91px;
+  // font-size: 2.5vw;
   background-color: #020203;
   color: #FFFFFF;
   box-shadow: 0 5px 20px black;
