--- a/front-end/src/components/keyDatas/KeyData.scss
+++ b/front-end/src/components/keyDatas/KeyData.scss
@@ -2,27 +2,31 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
+  // height: 70%;
   .keyData-card {
     &-calorieCount::before {
       content: url('../../assets/icons/keyData/calories-icon.svg');
+      scale: 0.75;
     }
     &-proteinCount::before {
       content: url('../../assets/icons/keyData/protein-icon.svg');
+      scale: 0.75;
     }
     &-carbohydrateCount::before {
       content: url('../../assets/icons/keyData/carbs-icon.svg');
+      scale: 0.75;
     }
     &-lipidCount::before {
       content: url('../../assets/icons/keyData/fat-icon.svg');
+      scale: 0.75;
     }
 
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    width: 258px;
-    height: 124px;
+    width: 180px;
+    height: 90px;
     background-color: #FBFBFB;
     border-radius: 10px;
     .text-wrapper {
@@ -30,12 +34,13 @@
       flex-direction: column;
       float: right;
       .keyData-value {
-        font-size: 18px;
+        font-size: 16px;
         font-weight: 600;
         color: #000000;
       }
       .keyData-name {
         color: #74798C;
+        font-size: 12px;
         font-weight: 600;
       }
     }
