--- a/front-end/src/components/layout/sideBar/Sidebar.scss
+++ b/front-end/src/components/layout/sideBar/Sidebar.scss
@@ -1,8 +1,8 @@
 .aside {
   z-index: 1;
-  height: 100%;
+  height: 100vh;
   // width: 10vw;
-  width: 117px;
+  width: 82px;
   float: left;
   background-color: #020203;
   color: #FFFFFF;
@@ -11,6 +11,7 @@
   justify-content: center;
   position: absolute;
   top: 0;
+  // bottom: 0;
   &-nav {
     color: transparent;
     &-link {
@@ -20,38 +21,41 @@
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      &-yoga::after {
-        content: url("../../../assets/icons/yoga.svg");
-        width: 64px;
-        height: 64px;
-        cursor: not-allowed;
+      scale: 0.7;
+      &-yoga {
+        &::after {
+          content: url("../../../assets/icons/yoga.svg");
+          cursor: not-allowed;
+        }
+
       }
-      &-swim::after{
-        content: url("../../../assets/icons/swim.svg");
-        width: 64px;
-        height: 64px;
-        cursor: not-allowed;
+      &-swim {
+        &::after {
+          content: url("../../../assets/icons/swim.svg");
+          cursor: not-allowed;
+        }
       }
-      &-bike::after {
-        content: url("../../../assets/icons/bike.svg");
-        width: 64px;
-        height: 64px;
-        cursor: not-allowed;
+      
+      &-bike {
+        &::after {
+          content: url("../../../assets/icons/bike.svg");
+          cursor: not-allowed;
+        }
       }
-      &-liftweight::after {
-        content: url("../../../assets/icons/liftweight.svg");
-        width: 64px;
-        height: 64px;
-        cursor: not-allowed;
+      &-liftweight {
+        &::after {
+          content: url("../../../assets/icons/liftweight.svg");
+          cursor: not-allowed;
+        }
       }
     }
   }
   &-copyright {
     position: absolute;
     bottom: 100px;
-    right: -10px;
+    right: -24px;
     width: 140px;
-    font-size: 12px;
+    font-size: 9px;
     transform: rotate(-90deg);
   }
 }
