--- a/front-end/src/pages/home/Home.scss
+++ b/front-end/src/pages/home/Home.scss
@@ -3,22 +3,29 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-left: 180px;
-  margin-right: 100px;
-  margin-block: 40px;
+  margin-left: 130px;
+  margin-top: 20px;
+  // margin-right: 100px;
+  // margin-block: 40px;
+
+  .welcome {
+    margin-bottom: 50px;
+  } 
   .data-wrapper {
-    margin-top: 40px;
-    height: 590px;
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    width: 100%;
+    height: 480px;
+    margin-right: 40px;
+    // margin-top: 50px;
+    // margin-bottom: 0px;
     .charts {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 100%;
-      width: 100%;
-      margin-right: 3rem;
+      // height: 100%;
+      // width: 100%;
+      // margin-right: 3rem;
       &-bottom {
         display: flex;
         justify-content: space-between;
