--- a/front-end/src/pages/home/Home.scss
+++ b/front-end/src/pages/home/Home.scss
@@ -38,3 +38,48 @@
   }
 }
 
+@media screen and (max-width: 874px) {
+  .home-container {
+    margin-top: 0px;
+    .welcome {
+      margin-right: 20px;
+    }
+    .data-wrapper {
+      flex-direction: column;
+      height: 100%;
+      margin-right: 40px;
+      .keyData-container {
+        align-self: center;
+        margin-top: 20px;
+      }
+      .charts {
+        &-top {
+          width: 100%;
+          max-width: 600px;
+          overflow-x: auto;
+          align-self: center;
+          .title-activity  {
+            font-size: 0.5rem;
+          }
+          .legend-weight {
+            margin-top: 20px;
+            font-size: 0.5rem;
+          }
+          .legend-calories {
+            font-size: 0.5rem;
+            margin-top: 20px;
+          }
+        }
+        &-bottom {
+          height: 600px;
+          align-self: center;
+          margin-top: 20px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+        }
+      }
+    }
+  }
+}
+
