--- a/front-end/src/pages/home/Home.scss
+++ b/front-end/src/pages/home/Home.scss
@@ -51,6 +51,9 @@
       .keyData-container {
         align-self: center;
         margin-top: 20px;
+        height: 100%;
+        gap: 20px;
+        margin-bottom: 30px;
       }
       .charts {
         &-top {
